EEC_InitBackup/src/objects/Involved_Persons__c.object
<CustomObject>
    <description>This object will be used to capture the involved persons in a Complaint or a Incident.</description>
    <fields>
        <fullName>Age__c</fullName>
        <inlineHelpText>If child, please provide the (estimated) age of the child.</inlineHelpText>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_birth_date__c</fullName>
        <label>Child&apos;s birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_involvement__c</fullName>
        <inlineHelpText>Describe briefly the involvement of this person in the complaint / incident</inlineHelpText>
        <label>Description of involvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Involved_In__c</fullName>
        <description>Case this person is involved in</description>
        <label>Involved In</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Involved Persons</relationshipLabel>
        <relationshipName>Involved_Persons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Role__c</fullName>
        <description>To be filled if the chosen role is &quot;Other&quot;</description>
        <inlineHelpText>Please detail the role of this person in case you chose &quot;Other&quot;</inlineHelpText>
        <label>Other Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Address__c</fullName>
        <label>Parent/Guardian&apos;s Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Name__c</fullName>
        <label>Parent/Guardian&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Telephone_Number__c</fullName>
        <label>Parent/Guardian&apos;s Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Staff People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Members of a Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Members of another Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource and Referral Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Staff__c</fullName>
        <label>Status of Staff</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Title of this person</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Involved Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First and Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involved Persons</pluralLabel>
    <recordTypes>
        <fullName>Adult_Involvement</fullName>
        <active>true</active>
        <description>Use this type to add an involved adult</description>
        <label>Adult Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Involvement</fullName>
        <active>true</active>
        <description>Use this type to add an involved child</description>
        <label>Child Involvement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Creation_Updates_on_Closed_Case</fullName>
        <active>true</active>
        <description>Block creation and updates on Closed case</description>
        <errorConditionFormula>ISPICKVAL(Involved_In__r.Status,&apos;Closed&apos;) &amp;&amp; !ISBLANK($UserRole.Name) &amp;&amp; !CONTAINS($UserRole.Name,&apos;Director&apos;) &amp;&amp; !CONTAINS($UserRole.Name,&apos;Supervisor&apos;)</errorConditionFormula>
        <errorMessage>Involved Persons can&apos;t be created or updated on &apos;Closed&apos; Cases.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_role_requires_role</fullName>
        <active>true</active>
        <description>If &quot;Other&quot; is chosen in the list of roles, then detail of the role must be entered</description>
        <errorConditionFormula>AND(ISPICKVAL(Role__c, &quot;Other&quot;), OR( Other_Role__c =&quot;&quot;, ISNULL( Other_Role__c), ISBLANK(Other_Role__c)))</errorConditionFormula>
        <errorDisplayField>Other_Role__c</errorDisplayField>
        <errorMessage>Please fill this field as you chose &quot;Other&quot; in the roles.</errorMessage>
    </validationRules>
</CustomObject>